Renamed in proper order

--- a/1-DatabricksLakehousePlatform/1.6-Exercise-UnityCatalog_and_TableManagement.ipynb
+++ b/1-DatabricksLakehousePlatform/1.6-Exercise-UnityCatalog_and_TableManagement.ipynb
@@ -765,7 +765,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "1-Exercise-UnityCatalog_and_TableManagement",
+   "notebookName": "1.6-Exercise-UnityCatalog_and_TableManagement",
    "widgets": {}
   },
   "language_info": {
