--- a/1-DatabricksLakehousePlatform/1.6-PracticeCode-UnityCatalog.ipynb
+++ b/1-DatabricksLakehousePlatform/1.6-PracticeCode-UnityCatalog.ipynb
@@ -424,7 +424,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Exercise-1-UnityCatalog",
+   "notebookName": "1.6-PracticeCode-UnityCatalog",
    "widgets": {}
   },
   "language_info": {
