--- a/1-DatabricksLakehousePlatform/1.6-Solution-UnityCatalog_and_TableManagement.ipynb
+++ b/1-DatabricksLakehousePlatform/1.6-Solution-UnityCatalog_and_TableManagement.ipynb
@@ -2114,7 +2114,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "1-Solution-UnityCatalog_and_TableManagement",
+   "notebookName": "1.6-Solution-UnityCatalog_and_TableManagement",
    "widgets": {}
   },
   "language_info": {
