--- a/1-DatabricksLakehousePlatform/1.7-ExerciseAdvancedFeatures.ipynb
+++ b/1-DatabricksLakehousePlatform/1.7-ExerciseAdvancedFeatures.ipynb
@@ -584,7 +584,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Exercise-1",
+   "notebookName": "1.7-ExerciseAdvancedFeatures",
    "widgets": {}
   },
   "language_info": {
