--- a/1-DatabricksLakehousePlatform/1.7-SolutionAdvancedFeatures.ipynb
+++ b/1-DatabricksLakehousePlatform/1.7-SolutionAdvancedFeatures.ipynb
@@ -924,7 +924,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Solution-1",
+   "notebookName": "1.7-SolutionAdvancedFeatures",
    "widgets": {}
   },
   "language_info": {
