--- a/1-DatabricksLakehousePlatform/1.7-PracticeCode-Advance.ipynb
+++ b/1-DatabricksLakehousePlatform/1.7-PracticeCode-Advance.ipynb
@@ -170,7 +170,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Exercise-1-Code",
+   "notebookName": "1.7-PracticeCode-Advance",
    "widgets": {}
   },
   "language_info": {
