updated comments in stractured streaming

--- a/3-IncrDataProcessing/3.0-SparkStructuredStreamingGuide.ipynb
+++ b/3-IncrDataProcessing/3.0-SparkStructuredStreamingGuide.ipynb
@@ -68,6 +68,37 @@
     "query = df.writeStream.trigger(continuous='1 second').start()\n",
     "```\n",
     "\n",
+    "#### Continous Processing Details\n",
+    "Structured Streaming (Continuous Processing Mode)\n",
+    "\n",
+    "The experimental low-latency mode introduced in Spark 2.3 for near real-time use cases.\n",
+    "\n",
+    "**⚙️ How It Works**\n",
+    "\n",
+    "Instead of waiting for batches, Spark processes records as soon as they arrive.\n",
+    "\n",
+    "Each executor thread continuously reads and writes data without micro-batch boundaries.\n",
+    "\n",
+    "**⚙️ The Truth: “1 second” = Checkpoint interval (commit interval)**\n",
+    "\n",
+    "Even though Spark processes records continuously, it still needs to periodically commit progress (offsets, output results, checkpoints, etc.) to guarantee fault tolerance and exactly-once semantics.\n",
+    "\n",
+    "That \"1 second\" value controls how frequently Spark commits its progress, not how often it processes data.\n",
+    "\n",
+    "**🧩 In Other Words:**\n",
+    "\n",
+    "Record processing: happens continuously, as soon as data arrives.\n",
+    "\n",
+    "Commit interval (the 1 second): defines how often Spark will:\n",
+    "\n",
+    "Write out any buffered outputs\n",
+    "\n",
+    "Update checkpoints\n",
+    "\n",
+    "Commit offsets to the source\n",
+    "\n",
+    "Make results visible to the sink\n",
+    "\n",
     "---\n",
     "\n",
     "### Slide 4: Programming Model - Core Concept\n",
