how to use databricks cli comments

--- a/8-Jobs&Pipelines/8.1-Jobs.ipynb
+++ b/8-Jobs&Pipelines/8.1-Jobs.ipynb
@@ -1328,6 +1328,7 @@
     "### **Step 2: Create the Job**\n",
     "1. Go to **Workflows** → **Jobs** → **Create Job**\n",
     "2. Configure job with these tasks:\n",
+    "3. Jobs json is available as _Demojob.json_ file.\n",
     "\n",
     "#### **Task Configuration:**\n",
     "```json\n",
@@ -1364,6 +1365,31 @@
     "    \"timezone\": \"UTC\"\n",
     "  }\n",
     "}\n",
+    "```\n",
+    "#### Configure job using Databicks cli\n",
+    "You can also configure jobs using databricks cli. Steps for using cli\n",
+    "- Install Databricks cli on you laptop\n",
+    "- Get the CLI token and your databricks workspace URL\n",
+    "- Configure your databricks token \n",
+    "```\n",
+    "databricks configure --token\n",
+    "```\n",
+    "- Test the cli\n",
+    "```\n",
+    "databricks workspace ls /\n",
+    "```\n",
+    "- Get the clusters ids of your workspace\n",
+    "```\n",
+    "databricks clusters list\n",
+    "```\n",
+    "- Update the cluster id in json file\n",
+    "- Use the below command to create the job\n",
+    "```\n",
+    "databricks jobs create --json '{\n",
+    "  \"name\": \"Demo-ETL-Pipeline\",\n",
+    "  \"email_notifications\": {},\n",
+    "  .... Full json file\n",
+    "  '\n",
     "```\n",
     "\n",
     "### **Step 3: Demo Features**\n",
